syntax = "proto3";

package user;

option go_package = "github.com/klemanjar0/payment-system/proto/user";

import "google/protobuf/timestamp.proto";

service UserService {
  // public
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);

  // internal
  rpc GetUser(GetUserRequest) returns (User);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (User);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);

  // private (user)
  rpc UpdateProfile(UpdateProfileRequest) returns (User);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

// === requests ===

message RegisterRequest {
  string email      = 1;
  string phone      = 2;
  string password   = 3;
  string first_name = 4;
  string last_name  = 5;
}

message RegisterResponse {
  string user_id       = 1;
  string access_token  = 2;
  string refresh_token = 3;
}

message AuthenticateRequest {
  string email    = 1;
  string password = 2;
}

message AuthenticateResponse {
  string user_id       = 1;
  string access_token  = 2;
  string refresh_token = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message ValidateUserRequest {
  string user_id = 1;
}

message ValidateUserResponse {
  bool       valid      = 1;
  UserStatus status     = 2;
  KYCStatus  kyc_status = 3;
}

message UpdateProfileRequest {
  string          user_id    = 1;
  optional string first_name = 2;
  optional string last_name  = 3;
  optional string phone      = 4;
}

message ChangePasswordRequest {
  string user_id      = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}

message User {
  string                    id         = 1;
  string                    email      = 2;
  string                    phone      = 3;
  string                    first_name = 4;
  string                    last_name  = 5;
  UserStatus                status     = 6;
  KYCStatus                 kyc_status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_PENDING     = 1;      // ждёт подтверждения email
  USER_STATUS_ACTIVE      = 2;       // всё ок
  USER_STATUS_BLOCKED     = 3;      // заблокирован
  USER_STATUS_DELETED     = 4;      // удалён
}

enum KYCStatus {
  KYC_STATUS_UNSPECIFIED = 0;
  KYC_STATUS_NONE        = 1;          // не проходил
  KYC_STATUS_PENDING     = 2;       // на проверке
  KYC_STATUS_VERIFIED    = 3;      // подтверждён
  KYC_STATUS_REJECTED    = 4;      // отклонён
}